@@ -2,6 +2,7 @@
 
   Positron::Template changes:
   - Environment inclusion sigils ',' and ';'
+  - Function-on-DOM sigil '^'
 
 v0.1.2    2014-01-07 20:42:26 UTC
 
